# JetEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  JetEngine.sln  README.md  premake5.lua
JetEngine/: CMakeLists.txt  JetEngine.vcxproj  JetEngine.vcxproj.filters
JetEngine/src/: JEpch.h  JetEngine.h
JetEngine/src/JetEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
JetEngine/src/JetEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Timestep.h  Window.h
JetEngine/src/JetEngine/Debug/: Instrumentator.h
JetEngine/src/JetEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
JetEngine/src/JetEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
JetEngine/src/JetEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
JetEngine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
JetEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
SandBox/: CMakeLists.txt  SandBox.vcxproj
SandBox/assets/shaders/: Texture.glsl
SandBox/src/: SandBoxApp.cpp  Sandbox2D.cpp  Sandbox2D.h
scripts/: Linux_CMake-Ninja-Clang-Wayland.sh  Linux_CMake-Ninja-Clang.sh  Linux_GenMake_Clang.sh  Linux_GenMake_Clang_Wayland.sh  Linux_GenMake_GCC_Wayland.sh  Linux_GenMake_GCC_X11.sh  Win_GenMake_CMake-Ninja-Clang.bat
